fix : try to fix base64 decoding

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,7 +20,9 @@ jobs:
           python-version: '3.9'
 
       - name: Decode Firebase Config
-        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | base64 --decode > ./database/firebase_config.json
+        shell: bash
+        run: |
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | base64 --decode > ./database/firebase_config.json
 
       - name: Cache pip packages
         uses: actions/cache@v3
