--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,22 +2,21 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '0 14 * * *'  # Runs daily at 14:00 UTC
-  workflow_dispatch:      # Allows manual triggering
+    - cron: "0 14 * * *" # Runs daily at 14:00 UTC
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   build:
-    runs-on: 
+    runs-on:
       - self-hosted
     steps:
-
       - name: checkout repo content
-        uses: actions/checkout@v3 
+        uses: actions/checkout@v3
 
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
       - name: decode Firebase Config
         shell: bash
@@ -30,8 +29,8 @@ jobs:
           path: ~\AppData\Local\pip\Cache
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-  
-            
+            ${{ runner.os }}-pip-
+
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
