--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,6 +32,8 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: install python packages
+        env:
+          REALTOR_API_URL: ${{ secrets.REALTOR_API_URL }}
         run: |
           python -m pip install --upgrade pip
           pip install --verbose -r requirements.txt
