--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,14 @@ jobs:
     runs-on:
       - self-hosted
     env:
-          REALTOR_API_URL: ${{ secrets.REALTOR_API_URL }}
+          BASE_SEARCH_PAYLOAD: ${{ secrets.BASE_SEARCH_PAYLOAD }}
+          SITE_URL: ${{ secrets.REALTOR_URL }}
+          SITE_API_URL: ${{ secrets.REALTOR_API_URL }}
+          HEADERS: ${{ secrets.HEADERS }}
+          RIVE_SUD_ZONES: ${{ secrets.RIVE_SUD_ZONES }}
+          MONTREAL_BOROUGH_ZONES: ${{ secrets.MONTREAL_BOROUGH_ZONES }}
+          MONTREAL_RECONSTITUTED_CITIES_ZONES: ${{ secrets.MONTREAL_RECONSTITUTED_CITIES_ZONES }}
+          PROXIES_SERVER_LIST: ${{ secrets.PROXIES_SERVER_LIST }}
     steps:
       - name: checkout repo content
         uses: actions/checkout@v3
