--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,8 +11,8 @@ jobs:
       - self-hosted
     env:
           BASE_SEARCH_PAYLOAD: ${{ secrets.BASE_SEARCH_PAYLOAD }}
-          SITE_URL: ${{ secrets.REALTOR_URL }}
-          SITE_API_URL: ${{ secrets.REALTOR_API_URL }}
+          SITE_URL: ${{ secrets.SITE_URL }}
+          SITE_API_URL: ${{ secrets.SITE_API_URL }}
           HEADERS: ${{ secrets.HEADERS }}
           RIVE_SUD_ZONES: ${{ secrets.RIVE_SUD_ZONES }}
           MONTREAL_BOROUGH_ZONES: ${{ secrets.MONTREAL_BOROUGH_ZONES }}
