--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,7 @@ jobs:
     env:
           BASE_SEARCH_PAYLOAD: ${{ secrets.BASE_SEARCH_PAYLOAD }}
           SITE_URL: ${{ secrets.SITE_URL }}
-          SITE_API_URL: ${{ secrets.SITE_API_URL }}
+          SITE_API_URL: ${{ secrets.SITE_URL_API }}
           HEADERS: ${{ secrets.HEADERS }}
           RIVE_SUD_ZONES: ${{ secrets.RIVE_SUD_ZONES }}
           MONTREAL_BOROUGH_ZONES: ${{ secrets.MONTREAL_BOROUGH_ZONES }}
