--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,6 +23,12 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v3
 
+      - name: Debug FIREBASE_SERVICE_ACCOUNT
+        run: |
+          echo "FIREBASE_SERVICE_ACCOUNT=${FIREBASE_SERVICE_ACCOUNT}"
+        env:
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+
       - name: setup python
         uses: actions/setup-python@v4
         with:
