--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,20 +10,21 @@ jobs:
     runs-on:
       - self-hosted
     env:
-          BASE_SEARCH_PAYLOAD: ${{ secrets.BASE_SEARCH_PAYLOAD }}
-          SITE_URL: ${{ secrets.SITE_URL }}
-          SITE_URL_API: ${{ secrets.SITE_URL_API }}
-          HEADERS: ${{ secrets.HEADERS }}
-          RIVE_SUD_ZONES: ${{ secrets.RIVE_SUD_ZONES }}
-          MONTREAL_BOROUGH_ZONES: ${{ secrets.MONTREAL_BOROUGH_ZONES }}FIREBASE_SERVICE_ACCOUNT
-          MONTREAL_RECONSTITUTED_CITIES_ZONES: ${{ secrets.MONTREAL_RECONSTITUTED_CITIES_ZONES }}
-          PROXIES_SERVER_LIST: ${{ secrets.PROXIES_SERVER_LIST }}
-          FIREBASE_SERVICE_ACCOUNT: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+      BASE_SEARCH_PAYLOAD: ${{ secrets.BASE_SEARCH_PAYLOAD }}
+      SITE_URL: ${{ secrets.SITE_URL }}
+      SITE_URL_API: ${{ secrets.SITE_URL_API }}
+      HEADERS: ${{ secrets.HEADERS }}
+      RIVE_SUD_ZONES: ${{ secrets.RIVE_SUD_ZONES }}
+      MONTREAL_BOROUGH_ZONES: ${{ secrets.MONTREAL_BOROUGH_ZONES }}
+      MONTREAL_RECONSTITUTED_CITIES_ZONES: ${{ secrets.MONTREAL_RECONSTITUTED_CITIES_ZONES }}
+      PROXIES_SERVER_LIST: ${{ secrets.PROXIES_SERVER_LIST }}
+      FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
     steps:
-      - name: checkout repo content
+      - name: Checkout repo content
         uses: actions/checkout@v3
 
       - name: Debug FIREBASE_SERVICE_ACCOUNT
+        shell: bash
         run: |
           if [ -n "${FIREBASE_SERVICE_ACCOUNT}" ]; then
             echo "FIREBASE_SERVICE_ACCOUNT is set."
@@ -33,12 +34,12 @@ jobs:
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
 
-      - name: setup python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      - name: cache pip packages
+      - name: Cache pip packages
         uses: actions/cache@v4
         with:
           path: ~\AppData\Local\pip\Cache
@@ -46,11 +47,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: install python packages
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install --verbose -r requirements.txt
 
-      - name: execute py script # run main.py
+      - name: Execute Python script
         run: |
           python main.py
