--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,11 +23,12 @@ jobs:
       - name: Checkout repo content
         uses: actions/checkout@v3
 
-      - name: Debug FIREBASE_SERVICE_ACCOUNT
+      - name: Debug FIREBASE_SERVICE_ACCOUNT content
         shell: bash
         run: |
           if [ -n "${FIREBASE_SERVICE_ACCOUNT}" ]; then
             echo "FIREBASE_SERVICE_ACCOUNT is set."
+            echo "Length: ${#FIREBASE_SERVICE_ACCOUNT}"
           else
             echo "FIREBASE_SERVICE_ACCOUNT is NOT set."
           fi
