fix : modify actions.yml

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,17 +25,21 @@ jobs:
       - name: Checkout repo content
         uses: actions/checkout@v3
 
-      - name: Debug FIREBASE_SERVICE_ACCOUNT content
+      - name: Debug FIREBASE_SERVICE_ACCOUNT2 content
         shell: bash
         run: |
-          if [ -n "${FIREBASE_SERVICE_ACCOUNT}" ]; then
-            echo "FIREBASE_SERVICE_ACCOUNT is set."
-            echo "Length: ${#FIREBASE_SERVICE_ACCOUNT}"
+          if [ -n "${FIREBASE_SERVICE_ACCOUNT2}" ]; then
+            echo "FIREBASE_SERVICE_ACCOUNT2 is set."
+            echo "Length: ${#FIREBASE_SERVICE_ACCOUNT2}"
+            
+            # Decode and output the first few lines for debugging
+            echo "Decoded content (first few lines):"
+            echo "${FIREBASE_SERVICE_ACCOUNT2}" | base64 --decode | head -n 10
           else
-            echo "FIREBASE_SERVICE_ACCOUNT is NOT set."
+            echo "FIREBASE_SERVICE_ACCOUNT2 is NOT set."
           fi
         env:
-          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          FIREBASE_SERVICE_ACCOUNT2: ${{ secrets.FIREBASE_SERVICE_ACCOUNT2 }}
 
       - name: Setup Python
         uses: actions/setup-python@v4
