--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on:
       - self-hosted
     env:
-      
+      FIREBASE: $$ {{ secrets.FIREBASE }}
       BASE_SEARCH_PAYLOAD: ${{ secrets.BASE_SEARCH_PAYLOAD }}
       SITE_URL: ${{ secrets.SITE_URL }}
       SITE_URL_API: ${{ secrets.SITE_URL_API }}
