--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,6 +11,7 @@ jobs:
       - self-hosted
     env:
       FIREBASE: $$ {{ secrets.FIREBASE }}
+      FIREBASE_BASE64: $$ {{ secrets.FIREBASE_BASE64 }}
       BASE_SEARCH_PAYLOAD: ${{ secrets.BASE_SEARCH_PAYLOAD }}
       SITE_URL: ${{ secrets.SITE_URL }}
       SITE_URL_API: ${{ secrets.SITE_URL_API }}
